# gce

./: .clang-tidy  .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  generate_tables.py  index.html  index.js  main.c  scratch  shell.html  tables.h
.github/workflows/: release.yml
core/: core.c  core.h  eval.c  moves.c  search.c
engine/: engine.h  eval.c  eval.h  position.c  position.h  search.c  search.h  tables.h  zobrist.c  zobrist.h
gui/: board.cpp  board.hpp  game.c  game.cpp  game.h  game.hpp  images.c  images.h  info.hpp  main.c  main.cpp  modals.cpp  modals.hpp  polyglot.cpp  polyglot.hpp  textures.c  textures.h  window.hpp
gui/assets/: build_assets.py  layout.ini  openings.json  vertical.ini
nnue/train/: main.ipynb  pyproject.toml
perft/: README.md  cases.json  generate_cases.py  main.c  main.cpp  suite.epd
test/: main.c  tinytest.h
test/elo/: sunfish.sh  test_elo.sh
tools/: .gitignore  build_assets.py  build_release.sh  deploy.sh  generate_tables.py  sprt_test.sh  test_elo.sh
tools/magics/: bishop.txt  rook.txt
uci/: logger.hpp  main.c  main.cpp
