[project]
name = "train"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "chess>=1.11.2",
    "notebook>=7.4.4",
    "numpy>=2.3.1",
    "polars>=1.31.0",
    "tinygrad>=0.10.3",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.0",
    "ipywidgets>=8.1.7",
    "jupyter>=1.1.1",
]
